Прошелся по чек листу

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <p class="profile__occupation">Исследователь океана</p>
           </div>
-          <button class="profile__add-button" href="./images/profile/cross.svg"></button>
+          <button class="profile__add-button"></button>
         </section>      
         
         <!-- блок elements -->
