--- a/index.html
+++ b/index.html
@@ -22,43 +22,43 @@
           <div class="profile__info">
             <div class="profile__edit-wrapper">
               <h2 class="profile__name">Жак-Ив Кусто</h2>
-              <button class="profile__edit-button" type="button" aria-label="edit"></button>
+              <button class="profile__edit-button" type="button" aria-label="Редактировать"></button>
             </div>
             <p class="profile__occupation">Исследователь океана</p>
           </div>
-          <button class="profile__add-button" type="button"></button>
+          <button class="profile__add-button" type="button" aria-label="Добавить"></button>
         </section>      
         <!-- блок elements -->
         <section class="elements">
           <div class="element">
             <img class="element__image" src="./images/elements/kirill-pershin-1088404-unsplash.jpg" alt="Заброшенный храм в Карачаевске">
             <h3 class="element__title">Карачаевск</h3>
-            <button class="element__like" type="button"></button>
+            <button class="element__like" type="button" aria-label="Понравилось"></button>
           </div>
           <div class="element">
             <img class="element__image" src="./images/elements/kirill-pershin-1404681-unsplash.jpg" alt="Вид на Эльбрус">
             <h3 class="element__title">Гора Эльбрус</h3>
-            <button class="element__like" type="button"></button>
+            <button class="element__like" type="button" aria-label="Понравилось"></button>
           </div>
           <div class="element">
             <img class="element__image" src="./images/elements/kirill-pershin-1556355-unsplash.jpg" alt="Ущелье и горы">
             <h3 class="element__title">Домбай</h3>
-            <button class="element__like" type="button"></button>
+            <button class="element__like" type="button" aria-label="Понравилось"></button>
           </div>
           <div class="element">
             <img class="element__image" src="./images/elements/kirill-pershin-1404681-unsplash.jpg" alt="Вид на Эльбрус">
             <h3 class="element__title">Гора Эльбрус</h3>
-            <button class="element__like" type="button"></button>
+            <button class="element__like" type="button" aria-label="Понравилось"></button>
           </div>
           <div class="element">
             <img class="element__image" src="./images/elements/kirill-pershin-1556355-unsplash.jpg" alt="Ущелье и горы">
             <h3 class="element__title">Домбай</h3>
-            <button class="element__like" type="button"></button>
+            <button class="element__like" type="button" aria-label="Понравилось"></button>
           </div>
           <div class="element">
             <img class="element__image" src="./images/elements/kirill-pershin-1088404-unsplash.jpg" alt="Заброшенный храм в Карачаевске">
             <h3 class="element__title">Карачаево-Черкессия</h3>
-            <button class="element__like" type="button"></button>
+            <button class="element__like" type="button" aria-label="Понравилось"></button>
           </div>
         </section>
         <!-- блок footer -->
@@ -68,7 +68,7 @@
         <!-- блок popup -->
         <section class="popup">
           <form class="popup__container" name="form" method="post" action="#">
-            <button class="popup__close-button" type="reset"></button>
+            <button class="popup__close-button" type="reset" aria-label="Закрыть окно"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <input class="popup__input popup__input_name" type="text" name="nameInput" placeholder="Имя" value="Жак-Ив Кусто">
             <input class="popup__input popup__input_occupation" type="text" name="profileOccupation" placeholder="Профессия" value="Исследователь океана">
