--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         </section>      
         <!-- блок elements -->
         <section class="elements">
-          <template class="photo-element">
+          <template id="card-element">
             <div class="element">
+              <button class="element__trash opacity" type="button" aria-label="Удалить"></button>
               <img class="element__image" src="" alt="">
               <h2 class="element__title"></h2>
               <button class="element__like opacity" type="button" aria-label="Понравилось"></button>
@@ -46,23 +47,23 @@
         <section class="popup">
           <form class="popup__container" name="form" method="post" action="#">
             <button class="popup__close-button opacity" type="reset" aria-label="Закрыть окно"></button>
-            <h2 class="popup__title"></h2>
-            <input class="popup__input popup__input_name" type="text" name="nameInput" placeholder="" value="Жак-Ив Кусто">
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input class="popup__input popup__input_name" type="text" name="nameInput" placeholder="Имя" value="Жак-Ив Кусто">
             <input class="popup__input popup__input_occupation" type="text" name="profileOccupation" placeholder="Профессия" value="Исследователь океана">
-            <button class="popup__submit-button" type="submit"></button>
+            <button class="popup__submit-button" type="submit">Сохранить</button>
           </form> 
         </section>
         <!-- блок popup-cards -->
         <section class="popup-cards">
-          <form class="popup__container" name="form" method="post" action="#">
-            <button class="popup__close-button opacity" type="reset" aria-label="Закрыть окно"></button>
-            <h2 class="popup__title"></h2>
-            <input class="popup__input popup__input_name" type="text" name="nameInput" placeholder="" value="Жак-Ив Кусто">
-            <input class="popup__input popup__input_occupation" type="text" name="profileOccupation" placeholder="Профессия" value="Исследователь океана">
-            <button class="popup__submit-button" type="submit"></button>
+          <form class="popup-cards__container" name="form" method="post" action="#">
+            <button class="popup-cards__close-button opacity" type="reset" aria-label="Закрыть окно"></button>
+            <h2 class="popup-cards__title">Новое место</h2>
+            <input class="popup-cards__input popup-cards__input_place" type="text" name="placeInput" placeholder="Название">
+            <input class="popup-cards__input popup-cards__input_image" type="text" name="imageInput" placeholder="Ссылка на картинку">
+            <button class="popup-cards__submit-button" type="submit">Создать</button>
           </form> 
         </section>
-        <!-- блок popup-image -->
+        <!-- блок popup-image 
         <section class="popup-image">
           <form class="popup__container" name="form" method="post" action="#">
             <button class="popup__close-button opacity" type="reset" aria-label="Закрыть окно"></button>
@@ -72,6 +73,7 @@
             <button class="popup__submit-button" type="submit"></button>
           </form> 
         </section>
+        -->
     </div>
     <script src="./js/script.js"></script>
 </body>
