--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
             <button class="popup__submit-button popup__submit-button_cards" type="submit">Создать</button>
           </form> 
         </section>
-        
         <!-- блок popup-image -->
         <section class="popup popup_image">
           <div class="popup__container-image"> 
-            <button class="popup__close-button-image opacity" type="reset" aria-label="Закрыть окно"></button>
-            <img class="popup__preview" src="">
+            <button class="popup__close-button popup__close-button-image opacity" type="reset" aria-label="Закрыть окно"></button>
+            <img class="popup__preview" alt="">
             <h2 class="popup__title-image"></h2>
           </div>
         </section>
