--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="stylesheet" href="pages/index.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ярослав Карданец. Пятая проектная работа на Яндекс Практикуме">
-    <meta name="keywords" content="html, css, javascript">
-    <meta name="author" content="Ярослав Карданец">
-    <title>Место</title>
-    <base target="_blank">
+  <link rel="stylesheet" href="pages/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ярослав Карданец. Пятая проектная работа на Яндекс Практикуме">
+  <meta name="keywords" content="html, css, javascript">
+  <meta name="author" content="Ярослав Карданец">
+  <title>Место</title>
+  <base target="_blank">
 </head>
 <body>
   <div class="page">
-      <!-- блок header -->
-      <header class="header">
-        <img class="header__logo" src="./images/header/mesto-logo.svg" alt="Логотип проекта">
-      </header>   
+    <!-- блок header -->
+    <header class="header">
+      <img class="header__logo" src="./images/header/mesto-logo.svg" alt="Логотип проекта">
+    </header>   
+    <main>
       <!-- блок profile -->
-      <main class="profile">
+      <section class="profile">
         <img class="profile__avatar" src="./images/profile/jycimage.jpg" alt="Жак-Ив Кусто">
         <div class="profile__info">
           <div class="profile__edit-wrapper">
@@ -30,9 +31,9 @@
           <p class="profile__occupation">Исследователь океана</p>
         </div>
         <button class="profile__add-button opacity" type="button" aria-label="Добавить"></button>
-      </main>      
+      </section>      
       <!-- блок elements -->
-      <main class="elements">
+      <section class="elements">
         <template id="card-element">
           <div class="element">
             <button class="element__trash opacity" type="button" aria-label="Удалить"></button>
@@ -41,13 +42,9 @@
             <button class="element__like opacity" type="button" aria-label="Понравилось"></button>
           </div>
         </template>
-      </main>
-      <!-- блок footer -->
-      <footer class="footer">
-        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
-      </footer>
+      </section>
       <!-- блок popup-title --> 
-      <main class="popup">
+      <section class="popup">
         <form class="popup__container" name="form" method="post" action="#">
           <button class="popup__close-button opacity" type="reset" aria-label="Закрыть окно"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
@@ -55,9 +52,9 @@
           <input class="popup__input popup__input_occupation" type="text" name="profileOccupation" placeholder="Профессия" value="Исследователь океана">
           <button class="popup__submit-button" type="submit">Сохранить</button>
         </form> 
-      </main>
+      </section>
       <!-- блок popup-cards -->
-      <main class="popup popup_cards">
+      <section class="popup popup_cards">
         <form class="popup__container popup__container_cards" name="form" method="post" action="#">
           <button class="popup__close-button popup__close-button_cards opacity" type="reset" aria-label="Закрыть окно"></button>
           <h2 class="popup__title popup__title_cards">Новое место</h2>
@@ -65,15 +62,20 @@
           <input class="popup__input popup__input_cards_image" type="text" name="imageInput" placeholder="Ссылка на картинку">
           <button class="popup__submit-button popup__submit-button_cards" type="submit">Создать</button>
         </form> 
-      </main>
+      </section>
       <!-- блок popup-image -->
-      <main class="popup popup_image">
+      <section class="popup popup_image">
         <div class="popup__container-image"> 
           <button class="popup__close-button popup__close-button-image opacity" type="reset" aria-label="Закрыть окно"></button>
           <img class="popup__preview" alt="">
           <h2 class="popup__title-image"></h2>
         </div>
-      </main>
+      </section>
+    </main>  
+    <!-- блок footer -->
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+    </footer>
   </div>
   <script src="./js/script.js"></script>
 </body>
