--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </template>
       </section>
       <!-- блок popup-title --> 
-      <section class="popup popup_main-info">
+      <section class="popup popup_profile">
         <form class="popup__container" name="form" method="post" action="#" novalidate>
-          <button class="popup__close-button opacity" type="reset" aria-label="Закрыть окно"></button>
+          <button class="popup__close-button popup__close-button_profile opacity" type="reset" aria-label="Закрыть окно"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
                      
               <input 
