--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
-  <script src="./js/script.js"></script>
-  <script src="./js/validation.js"></script>
+  <script type="module" src="./js/index.js"></script>
+  <script type="module" src="./js/FormValidator.js"></script>
+  <script type="module" src="./js/Card.js"></script>
 </body>
 </html>
