--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </footer>
   </div>
   <script type="module" src="./pages/index.js"></script>
-  <script type="module" src="./js/FormValidator.js"></script>
-  <script type="module" src="./js/Card.js"></script>
+  <script type="module" src="./components/FormValidator.js"></script>
+  <script type="module" src="./components/Card.js"></script>
 </body>
 </html>
