--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
-  <script type="module" src="./pages/index.js"></script>
+  <script type="module" src="./src/index.js"></script>
   <script type="module" src="./components/FormValidator.js"></script>
   <script type="module" src="./components/Card.js"></script>
 </body>
