--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link rel="stylesheet" href="pages/index.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ярослав Карданец. Пятая проектная работа на Яндекс Практикуме">
@@ -123,7 +122,7 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
-  <script type="module" src="./src/index.js"></script>
+  <script type="module" src="./index.js"></script>
   <script type="module" src="./components/FormValidator.js"></script>
   <script type="module" src="./components/Card.js"></script>
 </body>
