--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link rel="stylesheet" href="pages/index.css">
+  <!-- <link rel="stylesheet" href="pages/index.css"> -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ярослав Карданец. Пятая проектная работа на Яндекс Практикуме">
@@ -34,7 +34,7 @@
         <template id="card-element">
           <div class="element">
             <button class="element__trash opacity" type="button" aria-label="Удалить"></button>
-            <img class="element__image" src="" alt="">
+            <img class="element__image" src="#" alt="">
             <h2 class="element__title"></h2>
             <button class="element__like opacity" type="button" aria-label="Понравилось"></button>
           </div>
@@ -113,7 +113,7 @@
       <section class="popup popup_image">
         <div class="popup__container-image"> 
           <button class="popup__close-button popup__close-button-image opacity" type="reset" aria-label="Закрыть окно"></button>
-          <img class="popup__preview" src="" alt="">
+          <img class="popup__preview" src="#" alt="">
           <h2 class="popup__title-image"></h2>
         </div>
       </section>
@@ -123,8 +123,6 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
-  <script type="module" src="./pages/index.js"></script>
-  <script type="module" src="./components/FormValidator.js"></script>
-  <script type="module" src="./components/Card.js"></script>
+
 </body>
 </html>
